Product controller added
